package app.viewers;

public interface AdvancedImageViewer {
    void viewJpg(String fileName);
    void viewPng(String fileName);
}
