package app.viewers;

public interface ImageViewer {
    void view(String imageType, String fileName);
}
